--- a/.env sample
+++ b/.env sample
@@ -5,3 +5,6 @@ DB_USERNAME =root
 DB_PASSWORD =123456
 DB_DATABASE =nestjs-auth-mysql
 JWT_SECRET_KEY=thisismysecret
+
+# Server environment
+NODE_ENV=development
